<resources>
    <string name="app_name">Moonlight Note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">“Contacts permissions are needed for providing email
        completions.”
    </string>
    <string name="summary">Balance</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_output">Output</string>
    <string name="menu_income">Income</string>
    <string name="click_to_change_user_info">Click picture to set up you account</string>
    <string name="nav_header_email">your@email.com</string>
    <string name="nav_spinner_login">Login</string>
    <string name="nav_spinner_sign_out">Sign Out</string>
    <string name="menu_login">Add account</string>
    <string name="menu_logout">Remove active account</string>
    <string name="dialog_enter_new_label">Enter new label</string>
    <string name="user_change_password">Change Password</string>
    <string name="user_email">Email:</string>
    <string name="user_nickname">Nickname:</string>
    <string name="user_setNickname">Click to set nickname</string>
    <string name="done">Done</string>
    <string name="dialog_camera">Camera</string>
    <string name="dialog_album">Album</string>
    <string name="login_reset_password">Forgot password?</string>
    <string name="dialog_reset_password">Send a password reset email</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="google_title_text">Sign In with Google</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="login_send_email_succeed">Reset password email have been send to your email</string>
    <string name="ChoseEmailClient">Chose email app</string>
    <string name="dialog_enter_your_register_email">Enter your register email</string>
    <string name="moonlight_detail_title">Title</string>
    <string name="moonlight_detail_note">Note</string>
    <string name="prograssBar_uploading">Uploading&#8230;</string>
    <string name="menu_about_app">About App</string>
    <string name="fragment_audio_play">Play</string>
    <string name="fragment_audio_record">Record</string>
    <string name="fragment_audio_stop">Stop</string>
    <string name="action_trash">Trash</string>
    <string name="action_notes">Notes</string>
    <string name="bottom_sheet_left_take_photo">Take photo</string>
    <string name="bottom_sheet_left_choose_image">Choose image</string>
    <string name="bottom_sheet_left_recording">Recording</string>
    <string name="bottom_sheet_right_permanent_delete">Permanent delete</string>
    <string name="bottom_sheet_right_move_to_trash">Move to trash</string>
    <string name="bottom_sheet_right_make_a_copy">Make a copy</string>
    <string name="bottom_sheet_right_send">Send</string>
    <string name="menu_empty_trash">Empty Trash</string>
    <string name="dialog_empty_trash_title">Empty Trash?</string>
    <string name="dialog_empty_trash_content">All notes in Trash will be permanently deleted.</string>
    <string name="trash_restore">Can\'t edit in Trash</string>
    <string name="trash_restore_action">Restore</string>
    <string name="login_request">Please sign in!</string>
    <string name="fragment_login">Sign In</string>
    <string name="action_create">Create</string>
    <string name="menu_rate_app">Rate this app</string>
    <string name="delete_moonlight">Delete succeed!</string>
    <string name="restore_moonlight">Restore succeed!</string>
    <string name="title_activity_user">User</string>
    <string name="note_binned">Note binned</string>
    <string name="dialog_empty_trash_confirm">Empty Trash</string>
    <string name="dialog_enter_your_nickname">Enter your nickname</string>
    <string name="dialog_set_nickname">Set nickname</string>
    <string name="init_moonlight_title">Welcome to MoonlightNote!</string>
    <string name="init_moonlight_content">MoonlightNote based on Firebase, all of your data stores
        in Google Cloud Service are encrypted and secure.</string>
    <string name="fragment_trash">Trash</string>
    <string name="action_close_account">Delete account</string>
    <string name="delete_account_title">Delete Account?</string>
    <string name="delete_account_content">Warning: Before deleting your account, make sure that you
        have exported all the data. Deleted accounts can not be restored.
        (When you delete the account text notes will be deleted instantly, images and
        audio will be deleted after seven days)</string>
    <string name="dialog_delete_account_confirm">Delete Account</string>
    <string name="dialog_enter_your_password">Enter Your Password</string>
    <string name="old_password_hint">Enter your old password</string>
    <string name="new_password_hint">Enter your new password</string>
    <string name="action_change_password">Change password</string>
    <string name="settings_secure">Secure</string>
    <string name="settings_policy">Privacy Policy</string>
    <string name="settings_license">License</string>
    <string name="settings_about">About App</string>
    <string name="settings_license_content">
        “Moonlight Note:\n”
        “Copyright 2016 Art2Cat\n”
        “This App is distributed under an Apache 2.0 License.\n\n”

        “EventBus:\n”
        “Copyright (&#169;) 2012-2016 Markus Junginger, greenrobot (http://greenrobot.org)”
        “EventBus binaries and source code can be used according to the Apache License,”
        “Version 2.0.\n\n”

        “Material-Color-Picker:\n”
        “Copyright 2016 Turki Alkhateeb\n”
        “This library is distributed under an Apache 2.0 License.\n\n”
        
        “RateThisApp:\n”
        “Copyright 2013-2016 Keisuke Kobayashi\n”
        “This library is distributed under an Apache 2.0 License.\n\n”

        “Recyclerview-animators:\n”
        “Copyright 2015 Wasabeef\n”
        “This library is distributed under an Apache 2.0 License.\n\n”

        “Glide:\n”
        “Copyright 2013 Sam Judd\n”
        “This library is distributed under an Apache 2.0 License.\n\n”

        “LolliPin:\n”
        “Copyright 2015 OrangeGangsters\n”
        “This library is distributed under the MIT License (MIT).\n\n”

        “Gson:\n”
        “Copyright 2008 Google\n”
        “This library is distributed under an Apache 2.0 License.\n\n”

        “CircleImageView:\n”
        “Copyright 2014 - 2016 Henning Dodenhof\n”
        “This library is distributed under an Apache 2.0 License.\n\n”
    </string>
    <string name="settings_security_pin">Pin</string>
    <string name="settings_security_lock_app">Note Security</string>
    <string name="settings_security_title">Security</string>
    <string name="settings_security_password">Password</string>
    <string name="settings_security_pattern">Pattern</string>
    <string name="activity_not_locked_text">Nothing should happen on this page, here for test purpose
    </string>
    <string name="activity_dialog_title">Forgot you Pincode?</string>
    <string name="activity_dialog_accept">OK</string>
    <string name="activity_dialog_decline">Cancel</string>
    <string name="activity_dialog_content">Tap \'OK\' to log out, when you log back in you\'ll be
        able to create a new Pincode.\n\nIf you remember your Pincode, tap \'Cancel\' to go back.
    </string>
    <string name="activity_appcompat_message">I am a PinCompatActivity!</string>
    <string name="settings_security_enable">Enable</string>
    <string name="settings_security_pin_change">change pincode</string>
    <string name="settings_security_pin_enable">enable pincode</string>
    <string name="settings_security">Security</string>
    <string name="settings_security_disable_all">Disable Security</string>
    <string name="pref_header_security">App Security</string>
    <string name="backup_to_drive">Back up to Google Drive</string>
    <string name="settings_backup_to_drive">Back up data</string>
    <string name="settings_restore_data">Restore data</string>
    <string name="backup_to_sd">Back up to SD-card</string>
    <string name="pref_header_back_up_and_restore">Back up and restore</string>
    <string name="pref_header_about">About</string>
</resources>