<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.art2cat.dev.moonlightnote.ScrollingActivity">
    <item
        android:id="@+id/action_move_to_trash"
        android:orderInCategory="100"
        android:title="@string/bottom_sheet_right_move_to_trash"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_permanent_delete"
        android:orderInCategory="100"
        android:title="@string/bottom_sheet_right_permanent_delete"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_make_a_copy"
        android:orderInCategory="100"
        android:title="@string/bottom_sheet_right_make_a_copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/bottom_sheet_right_send"
        android:icon="@drawable/ic_send_black_24dp"
        app:showAsAction="always|withText" />
</menu>