<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.art2cat.dev.moonlightnote.Controller.Settings.SettingsActivity$SecurityFragment"
        android:icon="@drawable/ic_screen_lock_portrait_black_24dp"
        android:title="@string/pref_header_security" />

    <header
        android:fragment="com.art2cat.dev.moonlightnote.Controller.Settings.SettingsActivity$BackPreferenceFragment"
        android:icon="@drawable/ic_backup_black_24dp"
        android:title="@string/pref_header_back_up_and_restore" />

    <header
        android:fragment="com.art2cat.dev.moonlightnote.Controller.Settings.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_about" />



</preference-headers>
