<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.art2cat.dev.moonlightnote.ScrollingActivity">
    <item
        android:id="@+id/action_take_photo"
        android:icon="@drawable/ic_camera_black_24dp"
        android:orderInCategory="100"
        android:title="@string/bottom_sheet_left_take_photo"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_choose_image"
        android:icon="@drawable/ic_photo_album_black_24dp"
        android:orderInCategory="100"
        android:title="@string/bottom_sheet_left_choose_image"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_recording"
        android:icon="@drawable/ic_settings_voice_black_24dp"
        android:orderInCategory="100"
        android:title="@string/bottom_sheet_left_recording"
        app:showAsAction="always" />
</menu>