<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.art2cat.dev.moonlightnote.Controller.Settings.SecurityFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/settings_security_lock_app"
        android:textColor="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/security_pin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/settings_security_pin"
        android:theme="@style/FlatButtonStyle" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/security_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/settings_security_password"
        android:textAllCaps="false"
        android:theme="@style/FlatButtonStyle" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/security_pattern"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/settings_security_pattern"
        android:textAllCaps="false"
        android:theme="@style/FlatButtonStyle" />

</LinearLayout>
