<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.art2cat.dev.moonlightnote.Controller.User.ChangePasswordFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/old_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/old_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:theme="@style/MyEditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:theme="@style/MyEditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/user_change_password"
        android:theme="@style/RaiseButtonStyle" />
</android.support.v7.widget.LinearLayoutCompat>
